@@ -95,6 +95,12 @@ int ipmi_oem_wistron_get_link_status_change_control (ipmi_oem_state_data_t *stat
 int ipmi_oem_wistron_set_link_status_change_control (ipmi_oem_state_data_t *state_data);
 
 #if 0
+/* can't verify - need newer firmware */
+int ipmi_oem_wistron_get_password_policy (ipmi_oem_state_data_t *state_data);
+int ipmi_oem_wistron_set_password_policy (ipmi_oem_state_data_t *state_data);
+#endif
+
+#if 0
 /* can't verify - doesn't appear to work */
 int ipmi_oem_wistron_reset_to_defaults (ipmi_oem_state_data_t *state_data);
 #endif
