@@ -1340,6 +1340,23 @@ struct ipmi_oem_command oem_wistron[] =
       ipmi_oem_wistron_set_link_status_change_control
     },
 #if 0
+/* can't verify - need newer firmware */
+    {
+      "get-password-policy",
+      NULL,
+      0,
+      IPMI_OEM_COMMAND_FLAGS_DEFAULT,
+      ipmi_oem_wistron_get_password_policy
+    },
+    {
+      "set-password-policy",
+      "<enable|disable>",
+      1,
+      IPMI_OEM_COMMAND_FLAGS_DEFAULT,
+      ipmi_oem_wistron_set_password_policy
+    },
+#endif
+#if 0
 /* can't verify - doesn't appear to work */
     {
       "reset-to-defaults",
